--- a/client/src/components/sidebar/SideBar.module.css
+++ b/client/src/components/sidebar/SideBar.module.css
@@ -1,49 +1,61 @@
-.sidebar{
-	flex: 3;
-	height: calc(100vh - 50px);
-	overflow-y:scroll;
+.sidebar {
+  flex: 3;
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
 }
-.sidebarWrapper{
-	padding: 20px;
+::-webkit-scrollbar {
+  width: 5px;
 }
-.sidebarList{
-	padding:0;
-	margin:0;
-	list-style-type: none;
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
 }
-.sidebarListItem{
-	display:flex;
-	align-items: center;
-	margin-bottom: 20px;
+::-webkit-scrollbar-thumb {
+  background-color: rgb(179, 179, 179);
 }
-.sidebarIcon{
-	margin-right: 15px;
+.sidebarWrapper {
+  padding: 20px;
+}
+.sidebarList {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.sidebarListItem {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.sidebarIcon {
+  margin-right: 15px;
 }
 
-.sidebarButton{
-	width: 150px;
-	border:none;
-	padding:10px;
-	border-radius: 5px;
-	font-weight: 500;
+.sidebarButton {
+  width: 150px;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 500;
 }
 
-.sidebarHr{
-	margin: 20px 0;
+.sidebarHr {
+  margin: 20px 0;
 }
-.sidebarFriendList{
-	padding:0;
-	margin:0;
-	list-style: none;
+.sidebarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
-.sidebarFriend{
-	display: flex;
-	align-items: center;
-	margin-bottom: 15px;
+.sidebarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
-.sidebarFriendImg{
-	width:32px;
-	height: 32px;
-	border-radius: 50%;
-	object-fit: cover;
+.sidebarFriendImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.sidebarFriendName{
+	margin-left: 15px;
 }
