--- a/client/src/components/rightbar/RightBar.module.css
+++ b/client/src/components/rightbar/RightBar.module.css
@@ -30,3 +30,53 @@
 	margin: 0;
 	list-style-type: none;
 }
+
+/* Profile Page */
+
+.rightbarTitle{
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.rightbarInfo{
+  margin-bottom: 30px;
+}
+
+.rightbarInfoItem{
+  margin-bottom: 10px;
+}
+
+.rightbarInfoKey{
+  font-weight: 500;
+  margin-right: 15px;
+  color: #555;
+}
+
+.rightbarInfoValue{
+  font-weight: 300;
+}
+
+.rightbarFollowings{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.rightbarFollowing{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.rightbarFollowingImg{
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.rightbarFollowingName{
+  margin-top: 4px;
+}
+
