--- a/client/src/components/post/Post.module.css
+++ b/client/src/components/post/Post.module.css
@@ -42,6 +42,7 @@
   width: 100%;
   max-height: 500px;
   object-fit: contain;
+  background-size: cover;
 }
 
 .postBottom {
@@ -61,6 +62,7 @@
 }
 .postLikeCounter {
   font-size: 15px;
+  font-weight: 300;
 }
 .postCommentText{
 	cursor: pointer;
