--- a/client/src/pages/login/Login.module.css
+++ b/client/src/pages/login/Login.module.css
@@ -45,6 +45,7 @@
 .loginInput {
   height: 50px;
   border-radius: 10px;
+  font-weight: 300;
   padding: 0 20px;
   border: 0.5px solid rgb(169, 167, 167);
   font-size: 18px;
@@ -60,6 +61,7 @@
   color: white;
   font-size: 20px;
   font-weight: 500;
+  text-align: center;
   cursor: pointer;
 }
 .loginForgot {
