--- a/client/src/pages/register/Register.module.css
+++ b/client/src/pages/register/Register.module.css
@@ -55,6 +55,7 @@
   border: 0.5px solid rgb(169, 167, 167);
   font-size: 18px;
   padding: 0 20px;
+  font-weight: 300;
   margin-bottom: 3px;
 }
 .lastname{
@@ -64,6 +65,7 @@
 .registerInput {
   height: 50px;
   border-radius: 10px;
+  font-weight: 300;
   margin: 3px 0;
   padding: 0 20px;
   border: 0.5px solid rgb(169, 167, 167);
