--- a/client/src/components/share/Share.module.css
+++ b/client/src/components/share/Share.module.css
@@ -1,6 +1,6 @@
 .share {
   width: 100%;
-  height: 170px;
+  /* height: 170px; */
   border-radius: 10px;
   box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.26);
   -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.26);
@@ -66,4 +66,19 @@
 	cursor: pointer;
 	color:white;
 	background-color: #1877f2;
+}
+.shareImgContainer{
+	padding: 0 20px 10px 20px;
+	position: relative;
+}
+.shareImg{
+	width: 100%;
+	object-fit: cover;
+}
+.shareCancelImg{
+	position: absolute;
+	top: -10px;
+	right: 10px;
+	cursor: pointer;
+	opacity: 0.8;
 }
